# screenshot-recorder

./: .env.sample  .gitignore  manage.py  pyproject.toml
apps/screenshots/: admin.py  apps.py  cron.py  models.py  serializers.py  urls.py  views.py
apps/screenshots/migrations/: 0001_initial.py  0002_alter_devices_device_id_alter_devices_device_model.py  0003_alter_devices_device_id_alter_devices_device_model.py  0004_alter_devices_device_model.py  0005_screenshots.py  0006_alter_devices_options_alter_screenshots_options.py  0007_alter_devices_options_alter_screenshots_options.py  0008_remove_devices_device_id_devices_device_code.py  0009_alter_devices_device_code.py  0010_alter_screenshots_image.py  0011_remove_devices_device_model.py  0012_alter_screenshots_image.py  0013_alter_screenshots_image.py  0014_alter_screenshots_image.py  0015_remove_screenshots_device.py  0016_alter_screenshots_image.py  0017_alter_screenshots_image.py  0018_alter_screenshots_image.py  0019_alter_screenshots_image.py  0020_remove_devices_device_code_devices_d_brand_and_more.py  0021_screenshots_device.py  0022_rename_d_brand_devices_brand_and_more.py  0023_devices_create_time_devices_modified_time_and_more.py  0024_devices_is_active.py  0025_rename_is_active_devices_is_active_phone.py  0026_alter_screenshots_image.py  0027_alter_screenshots_image.py  0028_alter_screenshots_image.py  0029_alter_screenshots_image.py  0030_alter_screenshots_image.py  (+8 more)
apps/user/: admin.py  models.py
take_device_screen/: settings.py  urls.py  wsgi.py
utils/strings/: __init__.py  field_names.py
(+14 files in other folders)
